--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
+    "tiny-segmenter": "^0.2.0",
     "twitter": "^1.7.1",
-    "twitter-d": "^0.4.0"
+    "twitter-d": "git+ssh://git@github.com:Himself65/twitter-d.git"
   }
 }
