--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -9,10 +9,15 @@
   },
   "devDependencies": {
     "@types/react-dom": "^17.0.1",
+    "@zeit/next-sass": "^1.0.1",
+    "autoprefixer": "^10.2.4",
     "eslint": "^7.20.0",
     "eslint-config-sumikko": "^0.3.0",
+    "node-sass": "^5.0.0",
+    "postcss": "^8.2.6",
     "stylelint": "^13.10.0",
-    "stylelint-config-sumikko": "^0.1.0"
+    "stylelint-config-sumikko": "^0.1.0",
+    "tailwindcss": "^2.0.3"
   },
   "dependencies": {
     "next": "^10.0.6",
