--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -8,6 +8,8 @@
     "build": "next build"
   },
   "devDependencies": {
+    "@types/node": "^14.14.28",
+    "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "@zeit/next-sass": "^1.0.1",
     "autoprefixer": "^10.2.4",
@@ -17,7 +19,8 @@
     "postcss": "^8.2.6",
     "stylelint": "^13.10.0",
     "stylelint-config-sumikko": "^0.1.0",
-    "tailwindcss": "^2.0.3"
+    "tailwindcss": "^2.0.3",
+    "typescript": "^4.1.5"
   },
   "dependencies": {
     "next": "^10.0.6",
