--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "dev": "run-p dev:client dev:server",
     "dev:client": "cd ./packages/client && yarn dev",
     "dev:server": "cd ./packages/server && yarn dev",
-    "setup": "yarn install && run-p setup:client setup:server",
-    "setup:client": "cd ./packages/client && yarn install",
-    "setup:server": "cd ./packages/server && yarn install"
+    "setup": "yarn && run-p setup:client setup:server",
+    "setup:client": "cd ./packages/client && yarn",
+    "setup:server": "cd ./packages/server && yarn"
   },
   "devDependencies": {
     "@types/node": "^14.14.28",
