--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -31,7 +31,7 @@ jobs:
           git config --local user.name "ivgtr"
       - name: commit & push
         run: |
-          git add .
+          git add -A
           git commit -m "updating プペDB！" -a
           git pull
           git push origin master
