change: cron頻度を週一に

--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -2,7 +2,7 @@ name: workflow Get new Tweet and Create DB
 
 on:
   schedule:
-    - cron: "0 5 * * *"
+    - cron: "0 5 * * 1"
 
 jobs:
   working-buckend:
