:bug: fix: 修正の修正

--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -3,6 +3,10 @@ name: workflow Get new Tweet and Create DB
 # on:
 #   schedule:
 #     - cron: "0 5 * * 1"
+on:
+  push:
+    branches-ignore:
+      - "**"
 
 jobs:
   working-buckend:
